panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__test_multilevel_designated_initialisation_of_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/test_multilevel_designated_initialisation_of_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_multilevel_designated_initialisation_of_array.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn(x: int) -> int`
      (params
         x~3 `int`)
      (compound-statement
         (declaration s~4 `array<char; ∅>`
            (braced
               37
               100
               10
               0))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~4 `array<char; ∅>`)
               (name x~3 `int`)))
         (return (name x~3 `int`))))
   (function-definition
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (declaration xs~9 `array<array<int; 2>; 2>`
            (braced
               (designation ((index 0) (index 0))
                  (call (name f~1 `fn(x: int) -> int`)
                     1))
               (designation ((index 0) (index 1))
                  (call (name f~1 `fn(x: int) -> int`)
                     2))
               (designation ((index 1))
                  (call (name f~1 `fn(x: int) -> int`)
                     3))
               (designation ((index 1) (index 1))
                  (call (name f~1 `fn(x: int) -> int`)
                     4))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (subscript (subscript (name xs~9 `array<array<int; 2>; 2>`) 0) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (subscript (subscript (name xs~9 `array<array<int; 2>; 2>`) 0) 1)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (subscript (subscript (name xs~9 `array<array<int; 2>; 2>`) 1) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~8 `ptr<ptr<char>>`) 1)
               (subscript (subscript (name xs~9 `array<array<int; 2>; 2>`) 1) 1))))))

----- stderr -----
