panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__test_nonempty_braced_initialisation_of_static_storage_duration_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/test_nonempty_braced_initialisation_of_static_storage_duration_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_nonempty_braced_initialisation_of_static_storage_duration_variable.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (declaration xs~1 `array<int; 100>`
      (braced
         42
         27
         5
         2147483647))
   (declaration value~2 `int`
      (braced
         123))
   (function-definition
      main~3 `fn(∅: int, ∅: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~5 `int`
         main.unnamed_parameter.1~6 `ptr<ptr<char>>`)
      (compound-statement
         (declaration s~7 `array<char; 100>`
            (braced
               37
               100
               10))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 1)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 2)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 3)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 4)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (subscript (name xs~1 `array<int; 100>`) 99)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~7 `array<char; 100>`)
               (name value~2 `int`))))))

----- stderr -----
