panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__initialisation__test_simple_designated_initialisation_of_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/initialisation/test_simple_designated_initialisation_of_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_simple_designated_initialisation_of_array.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      f~1 `fn(x: int) -> int`
      (params
         x~3 `int`)
      (compound-statement
         (declaration s~4 `array<char const; ∅>`
            (braced
               37
               100
               10
               0))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~4 `array<char const; ∅>`)
               (name x~3 `int`)))
         (return (name x~3 `int`))))
   (function-definition
      main~5 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~7 `int`
         argv~8 `ptr<ptr<char>>`)
      (compound-statement
         (declaration xs~9 `array<int; ∅>`
            (braced
               (designation ((index 0))
                  (call (name f~1 `fn(x: int) -> int`)
                     1))
               (designation ((index 42))
                  (call (name f~1 `fn(x: int) -> int`)
                     2))
               (designation ((index 27))
                  (call (name f~1 `fn(x: int) -> int`)
                     3))
               (call (name f~1 `fn(x: int) -> int`)
                  4)
               (call (name f~1 `fn(x: int) -> int`)
                  5)
               (designation ((index 0))
                  (call (name f~1 `fn(x: int) -> int`)
                     42))))
         (declaration s~10 `ptr<char const>` (subscript (name argv~8 `ptr<ptr<char>>`) 1))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 1)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 26)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 27)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 28)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 29)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 30)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 41)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (name s~10 `ptr<char const>`)
               (subscript (name xs~9 `array<int; ∅>`) 42)))
         (declaration ys~11 `array<int; ∅>`
            (braced
               (designation ((index (sizeof `short`)))
                  (call (name f~1 `fn(x: int) -> int`)
                     100))
               (designation ((index (sizeof `char`)))
                  (call (name f~1 `fn(x: int) -> int`)
                     200))
               (designation ((index (sizeof `int`)))
                  (call (name f~1 `fn(x: int) -> int`)
                     400))))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (string "{%d, %d, %d, %d, %d}\n")
               (subscript (name ys~11 `array<int; ∅>`) 0)
               (subscript (name ys~11 `array<int; ∅>`) 1)
               (subscript (name ys~11 `array<int; ∅>`) 2)
               (subscript (name ys~11 `array<int; ∅>`) 3)
               (subscript (name ys~11 `array<int; ∅>`) 4))))))

----- stderr -----
